@@ -1,1 +1,1 @@
-#define VERSION	"Fourth Edition (20080529)"
+#define VERSION	"Fourth Edition (20080530)"
